nodejs-yaml/nodejs-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: app-fe
  labels:
    name: node-js-front-end-ns
