nodejs-yaml/nodejs-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-js-service
  namespace: app-fe
  labels:
    run: node-js-svc
spec:
  type: NodePort
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
    nodePort: 30010
    name: http
  selector:
    run: node-js-fe
