nodejs-yaml/nodejs-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: app-fe
  name: fe-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: myapp.com
    http:
      paths:
      - path: /app
        pathType: Prefix
        backend:
          service:
            name: node-js-service
            port: 
              number: 80
